# elfp

./: CMakeLists.txt  README.md
inc/: elfdump.h  elfp.h  util.h
src/: elfdump.c  elfp.c  main.c  util.c
